--- a/Control/pom.xml
+++ b/Control/pom.xml
@@ -195,7 +195,7 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
@@ -207,7 +207,7 @@
                     <extdirs>${project.basedir}/src/main/webapp/WEB-INF/lib</extdirs>
                 </compilerArguments>
             </configuration>
-			</plugin> -->
+			</plugin>
 		</plugins>
 	</build>
 </project>
