环境测试打包,pom

--- a/Control/pom.xml
+++ b/Control/pom.xml
@@ -217,7 +217,7 @@
 			<build>
 				<plugins>
 					<plugin>
-						<artifactId>maven-antrun-plugins</artifactId>
+						<artifactId>maven-antrun-plugin</artifactId>
 						<groupId>1.8</groupId>
 						<executions>
 							<execution>
