--- a/Control/src/main/resources/config/jdbc.properties
+++ b/Control/src/main/resources/config/jdbc.properties
@@ -1,4 +1,4 @@
 mysql.driverClassName=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://39.108.159.40:3306/tao_test?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
+mysql.url=jdbc:mysql://dbServer:3306/tao_test?useUnicode\=true&characterEncoding\=utf8&autoReconnect\=true
 mysql.username=chentao
 mysql.password=Z1314520x!
